--- a/package.json
+++ b/package.json
@@ -3,32 +3,49 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "cross-env PORT=10888 react-scripts start",
-    "build": "react-scripts build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "cross-env": "^5.2.1",
-    "react-hot-loader": "^4.13.0",
-    "react-scripts": "^2.1.8"
-  },
-  "dependencies": {
-    "@vkontakte/icons": "^1.141.1",
-    "@vkontakte/vkui": "^4.25.2",
-    "@vkontakte/vkui-connect": "^1.5.4",
-    "babel-eslint": "^9.0.0",
-    "core-js": "^2.6.12",
-    "prop-types": "^15.8.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "scripts": {
+        "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
+        "build": "react-scripts build",
+        "predeploy": "npm run build",
+        "deploy": "vk-miniapps-deploy"
+    },
+    "engines": {
+        "node": ">=12.0.0"
+    },
+    "keywords": [],
+    "license": "0BSD",
+    "dependencies": {
+        "@vkontakte/icons": "2.7.0",
+        "@vkontakte/vk-bridge": "latest",
+        "@vkontakte/vk-miniapps-deploy": "0.0.25",
+        "@vkontakte/vkui": "5.1.0",
+        "babel-eslint": "^10.1.0",
+        "eruda": "^2.4.1",
+        "eruda-code": "^2.0.0",
+        "eruda-dom": "^2.0.0",
+        "prop-types": "^15.7.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3",
+        "react-hot-loader": "^4.13.0",
+        "react-scripts": "^5.0.1"
+    },
+    "resolutions": {
+        "react-scripts/webpack-dev-server/yargs/yargs-parser": ">=18.1.2"
+    },
+    "overrides": {
+        "es5-ext@^0.10.50": "0.10.53"
+    },
+    "browserslist": {
+        "production": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ],
+        "development": [
+            "last 1 chrome version"
+        ]
+    }
 }
